Add kinoko category to goals and update JS

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
               <input id="goal_mame" type="text" value="1" /><div class="small-note" style="align-self:center;text-align:center;">豆/日</div>
               <input id="goal_tamago" type="text" value="1" /><div class="small-note" style="align-self:center;text-align:center;">卵/日</div>
               <input id="goal_yasai" type="text" value="5" /><div class="small-note" style="align-self:center;text-align:center;">野菜/日</div>
+            　<input id="goal_kinoko" type="text" value="1" /><div class="small-note" style="align-self:center;text-align:center;">きのこ/日</div>
             </div>
             <div class="actions">
               <button id="saveGoals" class="small">目標を保存</button>
