v7 完全版導入：抽出済み食材と目標達成カウント修正

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
   </div>
 
-<script src="meal_log.js"></script>
+<script src="meal_log_v7.js"></script>
 <script>
   // 今日の日付を表示
   document.getElementById('todayDisplay').textContent = new Date().toLocaleDateString();
